--- a/SimulacrumNo1/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/SimulacrumNo1/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -355,17 +355,20 @@ MaterialInstanceConstant=MaterialEditorInstanceConstant.General.MaterialProperty
 LastLevel=/Game/sANDdUNE
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
 DebuggerAttached=False
 RecentAssetEditors=MaterialEditor
+RecentAssetEditors=StaticMeshEditor
+RecentAssetEditors=PCGEditor
+RecentAssetEditors=MaterialEditor
 RecentAssetEditors=MaterialInstanceEditor
+RecentAssetEditors=MaterialEditor
 RecentAssetEditors=MaterialInstanceEditor
 RecentAssetEditors=MaterialEditor
 RecentAssetEditors=MaterialEditor
 RecentAssetEditors=MaterialEditor
 RecentAssetEditors=MaterialEditor
 RecentAssetEditors=MaterialEditor
-RecentAssetEditors=MaterialEditor
 RecentAssetEditors=TextureEditor
 RecentAssetEditors=TextureEditor
 RecentAssetEditors=MaterialEditor
@@ -384,9 +387,10 @@ RecentAssetEditors=MaterialEditor
 RecentAssetEditors=MaterialEditor
 RecentAssetEditors=MaterialEditor
 RecentAssetEditors=MaterialEditor
-RecentAssetEditors=MaterialEditor
-RecentAssetEditors=MaterialEditor
-RecentAssetEditors=MaterialEditor
+OpenAssetsAtExit=/Game/Materials/DancingMen/MI_Babtopus.MI_Babtopus
+OpenAssetsAtExit=/Game/Materials/DancingMen/MM_DancingMan.MM_DancingMan
+OpenAssetsAtExit=/Game/Materials/3DFractalsPCG/PCG_3DFractal.PCG_3DFractal
+OpenAssetsAtExit=/Game/WindowBox/CubeForWindow.CubeForWindow
 
 [DetailCategories]
 LandscapeStreamingProxy.TransformCommon=True
@@ -1454,9 +1458,59 @@ MaterialExpressionTextureSampleParameter2D.MaterialExpression=True
 MaterialExpressionTextureSampleParameter2D.MaterialExpressionTextureSample=True
 MaterialExpressionTextureSampleParameter2D.ParameterCustomization=True
 MaterialExpressionTextureSampleParameter2D.MaterialExpressionTextureBase=True
+PCGVolume.TransformCommon=True
+PCGVolume.PCG=True
+PCGVolume.HLOD=True
+PCGVolume.Collision=True
+PCGVolume.BrushSettings=True
+PCGVolume.Tags=True
+PCGVolume.Cooking=True
+PCGVolume.Navigation=True
+PCGVolume.Replication=True
+PCGVolume.Networking=True
+PCGVolume.Actor=True
+PCGGraph.AssetInfo=True
+PCGGraph.Settings=True
+PCGGraph.Debug=True
+PCGGraph.Graph=True
+PCGGraph.Cooking=True
+PCGGraph.Runtime Generation=True
+PCGGraph.Customization=True
+PCGCustomHLSLSettings.Settings=True
+PCGCustomHLSLSettings.Debug=True
+PCGCustomHLSLSettings.GPU=True
+PCGStaticMeshSpawnerSettings.Settings=True
+PCGStaticMeshSpawnerSettings.MeshSelector=True
+PCGStaticMeshSpawnerSettings.InstanceDataPacker=True
+PCGStaticMeshSpawnerSettings.Debug=True
+PCGStaticMeshSpawnerSettings.GPU=True
+PCGComponent.Settings=True
+PCGComponent.PCG=True
+PCGComponent.Instance=True
+PCGComponent.Editing Settings=True
+PCGComponent.Debug=True
+PCGComponent.Input Node Settings (Deprecated)=True
+PCGComponent.Tags=True
+PCGComponent.Activation=True
+PCGComponent.Cooking=True
+PCGSettings.Settings=True
+PCGSettings.Debug=True
+PCGSettings.GPU=True
+StaticMesh.StaticMeshMaterials=True
+StaticMesh.NaniteSettings=True
+StaticMesh.LODCustomMode=True
+StaticMesh.LOD0=True
+StaticMesh.LodSettings=True
+StaticMesh.StaticMesh=True
+StaticMesh.Collision=True
+StaticMesh.ImportSettings=True
+StaticMesh.RayTracing=True
+StaticMesh.Navigation=True
+StaticMeshSocket.StaticMeshSocket=True
+PCGGraph.Graph Parameters=True
 
 [ContentBrowser]
-ContentBrowserDrawer.SelectedPaths=/Game/Materials/DancingMen
+ContentBrowserDrawer.SelectedPaths=/Game
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserTab1.SelectedPaths=/Game/Materials/Textures
 ContentBrowserTab1.PluginFilters=
@@ -1486,21 +1540,22 @@ ContentBrowserDrawer.CurrentViewType=1
 ContentBrowserDrawer.ZoomScale=0
 ContentBrowserDrawer.ListViewColumnsManuallyChangedOnce=False
 ContentBrowserDrawer.ColumnViewColumnsManuallyChangedOnce=False
-ContentBrowserDrawer.JumpMRU=/All/Game/Materials/DancingMen
-ContentBrowserDrawer.JumpMRU=/All/Game/Materials/Textures
-ContentBrowserDrawer.JumpMRU=/All/Game/Materials/Babtopus
-ContentBrowserDrawer.JumpMRU=/All/Game/Materials/Cobblestone
+ContentBrowserDrawer.JumpMRU=/All/Game
+ContentBrowserDrawer.JumpMRU=/All
 ContentBrowserDrawer.JumpMRU=/All/Game/Materials
+ContentBrowserDrawer.JumpMRU=/All/Game/Assets
+ContentBrowserDrawer.JumpMRU=/All/Game/Materials/3DFractalsPCG
+ContentBrowserDrawer.JumpMRU=/All/Game/Materials/DancingMen
+ContentBrowserDrawer.JumpMRU=/All/Game/Materials/Babtopus
+ContentBrowserDrawer.JumpMRU=/All/Game/Materials/Textures
+ContentBrowserDrawer.JumpMRU=/All/Game/Materials/Cobblestone
 ContentBrowserDrawer.JumpMRU=/All/Game/Materials/MergeMaterial
 ContentBrowserDrawer.JumpMRU=/All/Game/WindowBox
 ContentBrowserDrawer.JumpMRU=/All/Game/Materials/TesselatingPatterns
 ContentBrowserDrawer.JumpMRU=/All/Game/Materials/Paintedplaster
 ContentBrowserDrawer.JumpMRU=/All/Game/Materials/StoneWall
-ContentBrowserDrawer.JumpMRU=/All/Game
-ContentBrowserDrawer.JumpMRU=/All/Game/Assets
 ContentBrowserDrawer.JumpMRU=/All/Game/Materials/Gravel
 ContentBrowserDrawer.JumpMRU=/All/Game/Developers
-ContentBrowserDrawer.JumpMRU=/All
 ContentBrowserTab1.SourcesExpanded=True
 ContentBrowserTab1.IsLocked=False
 ContentBrowserTab1.FavoritesAreaExpanded=False
@@ -1588,36 +1643,36 @@ ContentBrowserTab2.JumpMRU=/All/Game/Materials/TesselatingPatterns
 ContentBrowserTab2.JumpMRU=/All
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/Materials/MergeMaterial/M_MergeTestB
-MRUItem1=/Game/Materials/DancingMen/MI_Babtopus
-MRUItem2=/Game/Materials/DancingMen/MI_DancingMan_Inst
+MRUItem0=/Engine/Functions/Engine_MaterialFunctions02/HueShift
+MRUItem1=/Game/WindowBox/CubeForWindow
+MRUItem2=/Game/Materials/3DFractalsPCG/PCG_3DFractal
 MRUItem3=/Game/Materials/DancingMen/MM_DancingMan
-MRUItem4=/Game/Materials/Babtopus/M_BabtopusMerged
-MRUItem5=/Game/Materials/Babtopus/M_BabtopusMid
-MRUItem6=/Game/Materials/Babtopus/M_BabtopusHigh
-MRUItem7=/Game/Materials/Babtopus/M_BabtopusDark
-MRUItem8=/Game/Materials/Babtopus/M_resolutionDistortionTest
-MRUItem9=/Game/Materials/Textures/LowSatDistortionMap2
-MRUItem10=/Game/Materials/Textures/Babopus_DarkTones
-MRUItem11=/Game/Materials/MergeMaterial/M_MergeTestC
-MRUItem12=/Game/Materials/M_windowBox
-MRUItem13=/Game/Materials/MergeMaterial/M_cloudToWobble
-MRUItem14=/Game/Materials/MergeMaterial/M_MergeTestA
-MRUItem15=/Game/Materials/MergeMaterial/M_Cloud
-MRUItem16=/Game/Materials/Textures/distortion_shadertest
-MRUItem17=/Game/Materials/Textures/BLurNoise
-MRUItem18=/Game/Materials/Babtopus/Babopus_DarkTones
-MRUItem19=/Game/WindowBox/RT_SphereBox
-MRUItem20=/Engine/Functions/Engine_MaterialFunctions01/ImageAdjustment/CheapContrast
-MRUItem21=/Game/Materials/MergeMaterial/M_Wobble2
-MRUItem22=/Game/Materials/MergeMaterial/M_wobble
-MRUItem23=/Game/Materials/Textures/TesselatingPatterns/M_PatternMerge
-MRUItem24=/Game/Materials/Textures/TesselatingPatterns/M_Triforce
-MRUItem25=/Game/Materials/Textures/TesselatingPatterns/M_Checker
-MRUItem26=/Game/Materials/Cobblestone/M_CbblestoneDistortionOpacity
-MRUItem27=/Game/Materials/MergeMaterial/M_MergeGarvCobbleDistortion
-MRUItem28=/Game/Materials/Gravel/M_GravelDistprtionOPacity
-MRUItem29=/Game/Materials/Gravel/M_Grave
+MRUItem4=/Game/Materials/DancingMen/MI_Babtopus
+MRUItem5=/Game/Materials/MergeMaterial/M_MergeTestB
+MRUItem6=/Game/Materials/DancingMen/MI_DancingMan_Inst
+MRUItem7=/Game/Materials/Babtopus/M_BabtopusMerged
+MRUItem8=/Game/Materials/Babtopus/M_BabtopusMid
+MRUItem9=/Game/Materials/Babtopus/M_BabtopusHigh
+MRUItem10=/Game/Materials/Babtopus/M_BabtopusDark
+MRUItem11=/Game/Materials/Babtopus/M_resolutionDistortionTest
+MRUItem12=/Game/Materials/Textures/LowSatDistortionMap2
+MRUItem13=/Game/Materials/Textures/Babopus_DarkTones
+MRUItem14=/Game/Materials/MergeMaterial/M_MergeTestC
+MRUItem15=/Game/Materials/M_windowBox
+MRUItem16=/Game/Materials/MergeMaterial/M_cloudToWobble
+MRUItem17=/Game/Materials/MergeMaterial/M_MergeTestA
+MRUItem18=/Game/Materials/MergeMaterial/M_Cloud
+MRUItem19=/Game/Materials/Textures/distortion_shadertest
+MRUItem20=/Game/Materials/Textures/BLurNoise
+MRUItem21=/Game/Materials/Babtopus/Babopus_DarkTones
+MRUItem22=/Game/WindowBox/RT_SphereBox
+MRUItem23=/Engine/Functions/Engine_MaterialFunctions01/ImageAdjustment/CheapContrast
+MRUItem24=/Game/Materials/MergeMaterial/M_Wobble2
+MRUItem25=/Game/Materials/MergeMaterial/M_wobble
+MRUItem26=/Game/Materials/Textures/TesselatingPatterns/M_PatternMerge
+MRUItem27=/Game/Materials/Textures/TesselatingPatterns/M_Triforce
+MRUItem28=/Game/Materials/Textures/TesselatingPatterns/M_Checker
+MRUItem29=/Game/Materials/Cobblestone/M_CbblestoneDistortionOpacity
 
 [SlateAdditionalLayoutConfig]
 Viewport 1.LayoutType=FourPanes2x2
@@ -1633,6 +1688,7 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [PlacementMode]
+RecentlyPlaced=/Script/PCG.PCGVolume;/Engine/Transient.ActorFactoryBoxVolume_26
 RecentlyPlaced=/Engine/BasicShapes/Plane.Plane;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Game/Materials/Babtopus/BabtopuspPlane2.BabtopuspPlane2;
 RecentlyPlaced=/Game/Materials/Babtopus/BabtopuspPlane1.BabtopuspPlane1;
@@ -1652,7 +1708,6 @@ RecentlyPlaced=/Script/Engine.SpotLight;/Engine/Transient.ActorFactorySpotLight_
 RecentlyPlaced=/Game/Materials/Paintedplaster/M_PaintedPlaster.M_PaintedPlaster;
 RecentlyPlaced=/Game/Materials/StoneWall/lambert3.lambert3;
 RecentlyPlaced=/Game/Materials/lambert1.lambert1;
-RecentlyPlaced=/Game/WindowBox/SphereForSphere.SphereForSphere;
 
 [DetailPropertyExpansion]
 StaticMeshActor="\"Object.StaticMeshActor.StaticMeshComponent.Object.Collision.BodyInstance\" "
@@ -1733,8 +1788,8 @@ TakeRecorderAudioInputSettings="\"Object.AudioInputDevice\" "
 MovieSceneAnimationTrackRecorderEditorSettings="\"Object.TimecodeBoneMethod\" "
 MovieSceneTrackRecorderSettings="\"Object.TimecodeBoneMethod\" "
 MaterialExpressionVectorParameter="\"Object.DefaultValue\" \"Object.ChannelNames\" "
-MaterialExpressionParameter="\"Object.DefaultValue\" "
-MaterialExpression="\"Object.DefaultValue\" "
+MaterialExpressionParameter="\"Object.DefaultValue\" \"Object.ChannelNames\" "
+MaterialExpression=
 MaterialExpressionTextureSample="\"Object.ChannelNames\" "
 MaterialExpressionTextureBase="\"Object.ChannelNames\" "
 MaterialExpressionTextureSampleParameter2D="\"Object.ChannelNames\" "
@@ -1742,6 +1797,15 @@ MaterialExpressionTextureSampleParameter="\"Object.ChannelNames\" "
 MaterialEditorInstanceConstant="\"Object.ParameterGroups.ParameterGroups[1].Parameters.Parameters[0].Object.ParameterValue\" \"Object.ParameterGroups.ParameterGroups[2].Parameters.Parameters[0].Object.ParameterValue\" "
 MaterialEditorParameters="\"Object.ParameterGroups.ParameterGroups[1].Parameters.Parameters[0].Object.ParameterValue\" \"Object.ParameterGroups.ParameterGroups[2].Parameters.Parameters[0].Object.ParameterValue\" "
 MaterialExpressionScalarParameter="\"Object.DefaultValue\" "
+PCGVolume="\"Object.Collision.BrushComponent.Object.Collision.BodyInstance\" \"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
+Volume="\"Object.Collision.BrushComponent.Object.Collision.BodyInstance\" \"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
+Brush="\"Object.Collision.BrushComponent.Object.Collision.BodyInstance\" \"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
+PCGGraph="\"Object.Graph Parameters.UserParameters\" "
+PCGGraphInterface="\"Object.Graph Parameters.UserParameters\" "
+PCGStaticMeshSpawnerSettings=
+PCGSettings=
+PCGSettingsInterface=
+PCGData=
 
 [/Script/Engine.WorldPartitionEditorPerProjectUserSettings]
 bHideEditorDataLayers=False
@@ -1804,9 +1868,11 @@ PerWorldEditorSettings=(("/Game/sANDdUNE.sANDdUNE", (LoadedEditorRegions=((Min=(
 /Game/Materials/DancingMen/MM_DancingMan.MM_DancingMan=0
 /Game/Materials/DancingMen/MI_DancingMan_Inst.MI_DancingMan_Inst=0
 /Game/Materials/DancingMen/MI_Babtopus.MI_Babtopus=0
+/Game/WindowBox/CubeForWindow.CubeForWindow=0
+/Engine/Functions/Engine_MaterialFunctions02/HueShift.HueShift=0
 
 [MaterialEditor]
-PrimType=3
+PrimType=1
 
 [/Script/UnrealEd.MaterialStatsOptions]
 bPlatformUsed[0]=0
@@ -3676,20 +3742,24 @@ Texture2D.Texture=False
 StaticMeshActor.Materials=True
 Texture2D.Compositing=False
 MaterialEditorInstanceConstant.General=True
+PCGCustomHLSLSettings.Settings=False
+PCGCustomHLSLSettings.Debug=False
+PCGCustomHLSLSettings.GPU=False
 
 [ColorThemes]
 Theme0=New Theme
 
 [RecentColors]
-Color0=(R=240.000000,G=1.000000,B=0.240580,A=0.000000)
-Color1=(R=312.184784,G=0.592760,B=1.000000,A=1.000000)
-Color2=(R=0.000000,G=0.000000,B=1.000000,A=0.000000)
-Color3=(R=0.000000,G=0.000000,B=0.000000,A=0.000000)
-Color4=(R=0.000000,G=0.000000,B=0.500000,A=0.500000)
-Color5=(R=319.133575,G=0.210913,B=1.000000,A=1.000000)
-Color6=(R=358.360077,G=0.733802,B=0.500000,A=1.000000)
-Color7=(R=358.360107,G=0.937500,B=0.500000,A=1.000000)
-Color8=(R=358.345337,G=0.938926,B=0.502887,A=1.000000)
+Color0=(R=333.434967,G=0.089443,B=1.000000,A=1.000000)
+Color1=(R=358.345337,G=0.938926,B=0.502887,A=1.000000)
+Color2=(R=358.360107,G=0.937500,B=0.500000,A=1.000000)
+Color3=(R=358.360077,G=0.733802,B=0.500000,A=1.000000)
+Color4=(R=319.133575,G=0.210913,B=1.000000,A=1.000000)
+Color5=(R=0.000000,G=0.000000,B=0.500000,A=0.500000)
+Color6=(R=0.000000,G=0.000000,B=0.000000,A=0.000000)
+Color7=(R=0.000000,G=0.000000,B=1.000000,A=0.000000)
+Color8=(R=312.184784,G=0.592760,B=1.000000,A=1.000000)
+Color9=(R=240.000000,G=1.000000,B=0.240580,A=0.000000)
 
 [PropertyWindowWidths]
 PropertyEditorToolkit_PinAsColumnHeader=24
