--- a/SimulacrumNo1/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/SimulacrumNo1/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -355,8 +355,9 @@ MaterialInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.0_Textur
 LastLevel=/Game/sANDdUNE
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
 DebuggerAttached=False
+RecentAssetEditors=MaterialInstanceEditor
 RecentAssetEditors=PCGEditor
 RecentAssetEditors=MaterialEditor
 RecentAssetEditors=MaterialInstanceEditor
@@ -386,10 +387,8 @@ RecentAssetEditors=MaterialEditor
 RecentAssetEditors=MaterialEditor
 RecentAssetEditors=MaterialEditor
 RecentAssetEditors=MaterialEditor
-RecentAssetEditors=MaterialEditor
-OpenAssetsAtExit=/Game/Materials/DancingMen/MI_Babtopus.MI_Babtopus
+OpenAssetsAtExit=/Game/Materials/DancingMen/MI_BackgroundTreeTest.MI_BackgroundTreeTest
 OpenAssetsAtExit=/Game/Materials/DancingMen/MM_DancingMan.MM_DancingMan
-OpenAssetsAtExit=/Game/Materials/3DFractalsPCG/PCG_3DFractal.PCG_3DFractal
 
 [DetailCategories]
 LandscapeStreamingProxy.TransformCommon=True
@@ -1488,7 +1487,7 @@ PCGStaticMeshSpawnerSettings.Debug=True
 PCGStaticMeshSpawnerSettings.GPU=True
 
 [ContentBrowser]
-ContentBrowserDrawer.SelectedPaths=/Game/Materials/Textures
+ContentBrowserDrawer.SelectedPaths=/Game/Materials/DancingMen
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserTab1.SelectedPaths=/Game/Materials/Textures
 ContentBrowserTab1.PluginFilters=
@@ -1518,8 +1517,8 @@ ContentBrowserDrawer.CurrentViewType=1
 ContentBrowserDrawer.ZoomScale=0
 ContentBrowserDrawer.ListViewColumnsManuallyChangedOnce=False
 ContentBrowserDrawer.ColumnViewColumnsManuallyChangedOnce=False
-ContentBrowserDrawer.JumpMRU=/All/Game/Materials/Textures
 ContentBrowserDrawer.JumpMRU=/All/Game/Materials/DancingMen
+ContentBrowserDrawer.JumpMRU=/All/Game/Materials/Textures
 ContentBrowserDrawer.JumpMRU=/All/Game/Materials/Babtopus
 ContentBrowserDrawer.JumpMRU=/All/Game/Materials/Cobblestone
 ContentBrowserDrawer.JumpMRU=/All/Game/Materials
@@ -1620,36 +1619,36 @@ ContentBrowserTab2.JumpMRU=/All/Game/Materials/TesselatingPatterns
 ContentBrowserTab2.JumpMRU=/All
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/Materials/3DFractalsPCG/PCG_3DFractal
-MRUItem1=/Game/Materials/DancingMen/MM_DancingMan
-MRUItem2=/Game/Materials/DancingMen/MI_Babtopus
-MRUItem3=/Game/Materials/DancingMen/M_DancingMan
-MRUItem4=/Game/Materials/Babtopus/M_BabtopusMerged
-MRUItem5=/Game/Materials/Babtopus/M_BabtopusMid
-MRUItem6=/Game/Materials/Babtopus/M_BabtopusHigh
-MRUItem7=/Game/Materials/Babtopus/M_BabtopusDark
-MRUItem8=/Game/Materials/Babtopus/M_resolutionDistortionTest
-MRUItem9=/Game/Materials/MergeMaterial/M_MergeTestB
-MRUItem10=/Game/Materials/Textures/LowSatDistortionMap2
-MRUItem11=/Game/Materials/Textures/Babopus_DarkTones
-MRUItem12=/Game/Materials/MergeMaterial/M_MergeTestC
-MRUItem13=/Game/Materials/M_windowBox
-MRUItem14=/Game/Materials/MergeMaterial/M_cloudToWobble
-MRUItem15=/Game/Materials/MergeMaterial/M_MergeTestA
-MRUItem16=/Game/Materials/MergeMaterial/M_Cloud
-MRUItem17=/Game/Materials/Textures/distortion_shadertest
-MRUItem18=/Game/Materials/Textures/BLurNoise
-MRUItem19=/Game/Materials/Babtopus/Babopus_DarkTones
-MRUItem20=/Game/WindowBox/RT_SphereBox
-MRUItem21=/Engine/Functions/Engine_MaterialFunctions01/ImageAdjustment/CheapContrast
-MRUItem22=/Game/Materials/MergeMaterial/M_Wobble2
-MRUItem23=/Game/Materials/MergeMaterial/M_wobble
-MRUItem24=/Game/Materials/Textures/TesselatingPatterns/M_PatternMerge
-MRUItem25=/Game/Materials/Textures/TesselatingPatterns/M_Triforce
-MRUItem26=/Game/Materials/Textures/TesselatingPatterns/M_Checker
-MRUItem27=/Game/Materials/Cobblestone/M_CbblestoneDistortionOpacity
-MRUItem28=/Game/Materials/MergeMaterial/M_MergeGarvCobbleDistortion
-MRUItem29=/Game/Materials/Gravel/M_GravelDistprtionOPacity
+MRUItem0=/Game/Materials/DancingMen/MM_DancingMan
+MRUItem1=/Game/Materials/DancingMen/MI_BackgroundTreeTest
+MRUItem2=/Game/Materials/3DFractalsPCG/PCG_3DFractal
+MRUItem3=/Game/Materials/DancingMen/MI_Babtopus
+MRUItem4=/Game/Materials/DancingMen/M_DancingMan
+MRUItem5=/Game/Materials/Babtopus/M_BabtopusMerged
+MRUItem6=/Game/Materials/Babtopus/M_BabtopusMid
+MRUItem7=/Game/Materials/Babtopus/M_BabtopusHigh
+MRUItem8=/Game/Materials/Babtopus/M_BabtopusDark
+MRUItem9=/Game/Materials/Babtopus/M_resolutionDistortionTest
+MRUItem10=/Game/Materials/MergeMaterial/M_MergeTestB
+MRUItem11=/Game/Materials/Textures/LowSatDistortionMap2
+MRUItem12=/Game/Materials/Textures/Babopus_DarkTones
+MRUItem13=/Game/Materials/MergeMaterial/M_MergeTestC
+MRUItem14=/Game/Materials/M_windowBox
+MRUItem15=/Game/Materials/MergeMaterial/M_cloudToWobble
+MRUItem16=/Game/Materials/MergeMaterial/M_MergeTestA
+MRUItem17=/Game/Materials/MergeMaterial/M_Cloud
+MRUItem18=/Game/Materials/Textures/distortion_shadertest
+MRUItem19=/Game/Materials/Textures/BLurNoise
+MRUItem20=/Game/Materials/Babtopus/Babopus_DarkTones
+MRUItem21=/Game/WindowBox/RT_SphereBox
+MRUItem22=/Engine/Functions/Engine_MaterialFunctions01/ImageAdjustment/CheapContrast
+MRUItem23=/Game/Materials/MergeMaterial/M_Wobble2
+MRUItem24=/Game/Materials/MergeMaterial/M_wobble
+MRUItem25=/Game/Materials/Textures/TesselatingPatterns/M_PatternMerge
+MRUItem26=/Game/Materials/Textures/TesselatingPatterns/M_Triforce
+MRUItem27=/Game/Materials/Textures/TesselatingPatterns/M_Checker
+MRUItem28=/Game/Materials/Cobblestone/M_CbblestoneDistortionOpacity
+MRUItem29=/Game/Materials/MergeMaterial/M_MergeGarvCobbleDistortion
 
 [SlateAdditionalLayoutConfig]
 Viewport 1.LayoutType=FourPanes2x2
@@ -1833,7 +1832,7 @@ PerWorldEditorSettings=(("/Game/sANDdUNE.sANDdUNE", (LoadedEditorRegions=((Min=(
 /Game/Materials/3DFractalsPCG/PCG_3DFractal.PCG_3DFractal=0
 
 [MaterialEditor]
-PrimType=3
+PrimType=1
 
 [/Script/UnrealEd.MaterialStatsOptions]
 bPlatformUsed[0]=0
