--- a/SimulacrumNo1/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/SimulacrumNo1/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -355,10 +355,10 @@ MaterialInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.0_Textur
 LastLevel=/Game/sANDdUNE
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
 DebuggerAttached=False
-RecentAssetEditors=MaterialInstanceEditor
 RecentAssetEditors=MaterialEditor
+RecentAssetEditors=MaterialInstanceEditor
 RecentAssetEditors=MaterialEditor
 RecentAssetEditors=MaterialEditor
 RecentAssetEditors=MaterialEditor
@@ -387,8 +387,6 @@ RecentAssetEditors=MaterialEditor
 RecentAssetEditors=MaterialEditor
 RecentAssetEditors=MaterialEditor
 RecentAssetEditors=TextureEditor
-OpenAssetsAtExit=/Game/Materials/CurveAtlas/MI_MyCUrveTest.MI_MyCUrveTest
-OpenAssetsAtExit=/Game/Materials/WorldPosition/M_WorldpositionMerger.M_WorldpositionMerger
 
 [DetailCategories]
 LandscapeStreamingProxy.TransformCommon=True
@@ -1627,10 +1625,10 @@ ContentBrowserTab2.JumpMRU=/All/Game/Materials/TesselatingPatterns
 ContentBrowserTab2.JumpMRU=/All
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/Materials/CurveAtlas/MI_MyCUrveTest
-MRUItem1=/Game/Materials/CurveAtlas/M_CurveAtlas
-MRUItem2=/Game/Materials/WorldPosition/MF_LocalPosition
-MRUItem3=/Game/Materials/WorldPosition/M_WorldpositionMerger
+MRUItem0=/Game/Materials/WorldPosition/M_WorldpositionMerger
+MRUItem1=/Game/Materials/CurveAtlas/MI_MyCUrveTest
+MRUItem2=/Game/Materials/CurveAtlas/M_CurveAtlas
+MRUItem3=/Game/Materials/WorldPosition/MF_LocalPosition
 MRUItem4=/Game/Materials/DancingMen/MM_ParalaxDistortion
 MRUItem5=/Game/Materials/Babtopus/M_BabtopusHigh
 MRUItem6=/Game/Materials/Babtopus/M_ProoffofHDDotprtionMap
@@ -1855,7 +1853,7 @@ PerWorldEditorSettings=(("/Game/sANDdUNE.sANDdUNE", (LoadedEditorRegions=((Min=(
 /Game/Materials/WorldPosition/M_WorldpositionMerger.M_WorldpositionMerger=1
 
 [MaterialEditor]
-PrimType=3
+PrimType=1
 
 [/Script/UnrealEd.MaterialStatsOptions]
 bPlatformUsed[0]=0
@@ -3731,17 +3729,21 @@ StaticMeshActor.Materials=False
 Theme0=New Theme
 
 [RecentColors]
-Color0=(R=286.337860,G=0.782081,B=0.000000,A=1.000000)
-Color1=(R=240.775604,G=0.737355,B=0.000000,A=1.000000)
-Color2=(R=319.133575,G=0.210913,B=1.000000,A=1.000000)
-Color3=(R=0.000000,G=0.000000,B=0.500000,A=0.500000)
-Color4=(R=0.000000,G=0.000000,B=0.000000,A=0.000000)
-Color5=(R=0.000000,G=0.000000,B=1.000000,A=0.000000)
-Color6=(R=103.392670,G=0.000000,B=1.000000,A=1.000000)
+Color0=(R=0.000000,G=0.000000,B=1.000000,A=1.000000)
+Color1=(R=0.000000,G=0.000000,B=0.000000,A=1.000000)
+Color2=(R=7.853302,G=0.112847,B=0.000000,A=1.000000)
+Color3=(R=248.127487,G=0.000000,B=1.000000,A=1.000000)
+Color4=(R=254.026443,G=0.932678,B=0.161458,A=1.000000)
+Color5=(R=163.943878,G=0.711070,B=0.764334,A=1.000000)
+Color6=(R=6.452410,G=0.836466,B=1.000000,A=1.000000)
 Color7=(R=240.206024,G=0.795288,B=0.467991,A=1.000000)
-Color8=(R=6.452410,G=0.836466,B=1.000000,A=1.000000)
-Color9=(R=163.943878,G=0.711070,B=0.764334,A=1.000000)
-Color10=(R=254.026443,G=0.932678,B=0.161458,A=1.000000)
+Color8=(R=103.392670,G=0.000000,B=1.000000,A=1.000000)
+Color9=(R=0.000000,G=0.000000,B=1.000000,A=0.000000)
+Color10=(R=0.000000,G=0.000000,B=0.000000,A=0.000000)
+Color11=(R=0.000000,G=0.000000,B=0.500000,A=0.500000)
+Color12=(R=319.133575,G=0.210913,B=1.000000,A=1.000000)
+Color13=(R=240.775604,G=0.737355,B=0.000000,A=1.000000)
+Color14=(R=286.337860,G=0.782081,B=0.000000,A=1.000000)
 
 [SuppressableDialogs]
 Warning_NoPreviewMeshFound=False
