--- a/SimulacrumNo1/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/SimulacrumNo1/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -357,6 +357,9 @@ LastLevel=/Game/sANDdUNE
 [AssetEditorSubsystem]
 CleanShutdown=False
 DebuggerAttached=False
+RecentAssetEditors=TextureEditor
+RecentAssetEditors=TextureEditor
+RecentAssetEditors=MaterialEditor
 RecentAssetEditors=MaterialEditor
 RecentAssetEditors=MaterialInstanceEditor
 RecentAssetEditors=MaterialEditor
@@ -384,9 +387,8 @@ RecentAssetEditors=MaterialEditor
 RecentAssetEditors=MaterialEditor
 RecentAssetEditors=MaterialEditor
 RecentAssetEditors=MaterialEditor
-RecentAssetEditors=MaterialEditor
-RecentAssetEditors=MaterialEditor
-RecentAssetEditors=TextureEditor
+OpenAssetsAtExit=/Game/Materials/RockRGBMAsk/M_RBGMaskRock.M_RBGMaskRock
+OpenAssetsAtExit=/Game/Materials/RockRGBMAsk/rock_low_DefaultMaterial_BaseColor.rock_low_DefaultMaterial_BaseColor
 
 [DetailCategories]
 LandscapeStreamingProxy.TransformCommon=True
@@ -1489,9 +1491,10 @@ MaterialExpressionTransformPosition.MaterialExpression=True
 MaterialExpressionConstant4Vector.MaterialExpressionConstant4Vector=True
 MaterialExpressionConstant4Vector.MaterialExpression=True
 MaterialExpressionDistance.MaterialExpression=True
+Texture2D.Interchange =True
 
 [ContentBrowser]
-ContentBrowserDrawer.SelectedPaths=/Game/Materials/CurveAtlas
+ContentBrowserDrawer.SelectedPaths=/Game/Materials/RockRGBMAsk
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserTab1.SelectedPaths=/Game
 ContentBrowserTab1.PluginFilters=
@@ -1521,8 +1524,9 @@ ContentBrowserDrawer.CurrentViewType=1
 ContentBrowserDrawer.ZoomScale=0
 ContentBrowserDrawer.ListViewColumnsManuallyChangedOnce=False
 ContentBrowserDrawer.ColumnViewColumnsManuallyChangedOnce=False
-ContentBrowserDrawer.JumpMRU=/All/Game/Materials/WorldPosition
+ContentBrowserDrawer.JumpMRU=/All/Game/Materials/RockRGBMAsk
 ContentBrowserDrawer.JumpMRU=/All/Game/Materials
+ContentBrowserDrawer.JumpMRU=/All/Game/Materials/WorldPosition
 ContentBrowserDrawer.JumpMRU=/All/Game/Materials/CurveAtlas
 ContentBrowserDrawer.JumpMRU=/All/Game/Materials/Textures
 ContentBrowserDrawer.JumpMRU=/All/Game/Materials/Textures/TesselatingPatterns
@@ -1625,36 +1629,36 @@ ContentBrowserTab2.JumpMRU=/All/Game/Materials/TesselatingPatterns
 ContentBrowserTab2.JumpMRU=/All
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/Materials/WorldPosition/M_WorldpositionMerger
-MRUItem1=/Game/Materials/CurveAtlas/MI_MyCUrveTest
-MRUItem2=/Game/Materials/CurveAtlas/M_CurveAtlas
-MRUItem3=/Game/Materials/WorldPosition/MF_LocalPosition
-MRUItem4=/Game/Materials/DancingMen/MM_ParalaxDistortion
-MRUItem5=/Game/Materials/Babtopus/M_BabtopusHigh
-MRUItem6=/Game/Materials/Babtopus/M_ProoffofHDDotprtionMap
-MRUItem7=/Game/Materials/Babtopus/M_Mids
-MRUItem8=/Game/Materials/CurveAtlas/MI_MyCurveTest3
-MRUItem9=/Game/Materials/Babtopus/M_BabtopusMerged
-MRUItem10=/Game/Materials/Babtopus/M_Higlights
-MRUItem11=/Engine/Functions/Engine_MaterialFunctions03/Procedurals/ComputeFilterWidth
-MRUItem12=/Game/Materials/CurveAtlas/MI_MyCurveTest2
-MRUItem13=/Game/Materials/CurveAtlas/C_MyCyrve3
-MRUItem14=/Game/Materials/CurveAtlas/CA_MyCurveAtlas
-MRUItem15=/Game/Materials/CurveAtlas/C_MyCyrve2
-MRUItem16=/Game/Materials/CurveAtlas/C_MyCurve
-MRUItem17=/Engine/EngineSky/M_SimpleSkyDome
-MRUItem18=/Game/Materials/BackgroundTest/MI_MidGround
-MRUItem19=/Game/Materials/DancingMen/MI_BackgroundTest
-MRUItem20=/Game/Materials/DancingMen/MI_Babtopus
-MRUItem21=/Game/Materials/MergeMaterial/M_Wobble2
-MRUItem22=/Game/Materials/Textures/BLurNoise
-MRUItem23=/Game/Materials/MergeMaterial/M_wobble
-MRUItem24=/Game/Materials/MergeMaterial/M_Cloud
-MRUItem25=/Game/Materials/MergeMaterial/M_cloudToWobble
-MRUItem26=/Game/Materials/Textures/TesselatingPatterns/M_PatternMerge
-MRUItem27=/Game/Materials/Textures/TesselatingPatterns/M_Triforce
-MRUItem28=/Game/Materials/Textures/TesselatingPatterns/M_Checker
-MRUItem29=/Game/WindowBox/RT_SphereBox
+MRUItem0=/Game/Materials/RockRGBMAsk/rock_low_DefaultMaterial_Normal
+MRUItem1=/Game/Materials/RockRGBMAsk/rock_low_DefaultMaterial_BaseColor
+MRUItem2=/Game/Materials/RockRGBMAsk/M_RBGMaskRock
+MRUItem3=/Game/Materials/WorldPosition/M_WorldpositionMerger
+MRUItem4=/Game/Materials/CurveAtlas/MI_MyCUrveTest
+MRUItem5=/Game/Materials/CurveAtlas/M_CurveAtlas
+MRUItem6=/Game/Materials/WorldPosition/MF_LocalPosition
+MRUItem7=/Game/Materials/DancingMen/MM_ParalaxDistortion
+MRUItem8=/Game/Materials/Babtopus/M_BabtopusHigh
+MRUItem9=/Game/Materials/Babtopus/M_ProoffofHDDotprtionMap
+MRUItem10=/Game/Materials/Babtopus/M_Mids
+MRUItem11=/Game/Materials/CurveAtlas/MI_MyCurveTest3
+MRUItem12=/Game/Materials/Babtopus/M_BabtopusMerged
+MRUItem13=/Game/Materials/Babtopus/M_Higlights
+MRUItem14=/Engine/Functions/Engine_MaterialFunctions03/Procedurals/ComputeFilterWidth
+MRUItem15=/Game/Materials/CurveAtlas/MI_MyCurveTest2
+MRUItem16=/Game/Materials/CurveAtlas/C_MyCyrve3
+MRUItem17=/Game/Materials/CurveAtlas/CA_MyCurveAtlas
+MRUItem18=/Game/Materials/CurveAtlas/C_MyCyrve2
+MRUItem19=/Game/Materials/CurveAtlas/C_MyCurve
+MRUItem20=/Engine/EngineSky/M_SimpleSkyDome
+MRUItem21=/Game/Materials/BackgroundTest/MI_MidGround
+MRUItem22=/Game/Materials/DancingMen/MI_BackgroundTest
+MRUItem23=/Game/Materials/DancingMen/MI_Babtopus
+MRUItem24=/Game/Materials/MergeMaterial/M_Wobble2
+MRUItem25=/Game/Materials/Textures/BLurNoise
+MRUItem26=/Game/Materials/MergeMaterial/M_wobble
+MRUItem27=/Game/Materials/MergeMaterial/M_Cloud
+MRUItem28=/Game/Materials/MergeMaterial/M_cloudToWobble
+MRUItem29=/Game/Materials/Textures/TesselatingPatterns/M_PatternMerge
 
 [SlateAdditionalLayoutConfig]
 Viewport 1.LayoutType=FourPanes2x2
@@ -1670,6 +1674,7 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [PlacementMode]
+RecentlyPlaced=/Game/Materials/RockRGBMAsk/Rock.Rock;
 RecentlyPlaced=/Game/Materials/WorldPosition/M_WorldpositionMerger.M_WorldpositionMerger;
 RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Engine/BasicShapes/Sphere.Sphere;/Engine/Transient.ActorFactoryBasicShape_0
@@ -1689,7 +1694,6 @@ RecentlyPlaced=/Script/Engine.SpotLight;/Engine/Transient.ActorFactorySpotLight_
 RecentlyPlaced=/Game/Materials/Paintedplaster/M_PaintedPlaster.M_PaintedPlaster;
 RecentlyPlaced=/Game/Materials/StoneWall/lambert3.lambert3;
 RecentlyPlaced=/Game/Materials/lambert1.lambert1;
-RecentlyPlaced=/Game/WindowBox/SphereForSphere.SphereForSphere;
 
 [DetailPropertyExpansion]
 StaticMeshActor="\"Object.StaticMeshActor.StaticMeshComponent.Object.Collision.BodyInstance\" "
@@ -1770,9 +1774,9 @@ TakeRecorderAudioInputSettings="\"Object.AudioInputDevice\" "
 MovieSceneAnimationTrackRecorderEditorSettings="\"Object.TimecodeBoneMethod\" "
 MovieSceneTrackRecorderSettings="\"Object.TimecodeBoneMethod\" "
 CurveLinearColorAtlas="\"Object.Curves.GradientCurves\" "
-Texture2D="\"Object.Curves.GradientCurves\" "
-Texture="\"Object.Curves.GradientCurves\" "
-StreamableRenderAsset="\"Object.Curves.GradientCurves\" "
+Texture2D=
+Texture=
+StreamableRenderAsset=
 StaticMeshComponent="\"Object.Collision.BodyInstance\" "
 MeshComponent="\"Object.Collision.BodyInstance\" "
 PrimitiveComponent="\"Object.Collision.BodyInstance\" "
@@ -3713,7 +3717,7 @@ Assets_LastSelectedPipeline=InterchangeGenericAssetsPipeline
 
 [InterchangeImportDialogOptions]
 ImportContentDialogSizeX=1004
-ImportContentDialogSizeY=676.66668701171875
+ImportContentDialogSizeY=677
 
 [SelectionDetails]
 PreserveScaleRatio=False
@@ -3727,23 +3731,6 @@ StaticMeshActor.Materials=False
 
 [ColorThemes]
 Theme0=New Theme
-
-[RecentColors]
-Color0=(R=0.000000,G=0.000000,B=1.000000,A=1.000000)
-Color1=(R=0.000000,G=0.000000,B=0.000000,A=1.000000)
-Color2=(R=7.853302,G=0.112847,B=0.000000,A=1.000000)
-Color3=(R=248.127487,G=0.000000,B=1.000000,A=1.000000)
-Color4=(R=254.026443,G=0.932678,B=0.161458,A=1.000000)
-Color5=(R=163.943878,G=0.711070,B=0.764334,A=1.000000)
-Color6=(R=6.452410,G=0.836466,B=1.000000,A=1.000000)
-Color7=(R=240.206024,G=0.795288,B=0.467991,A=1.000000)
-Color8=(R=103.392670,G=0.000000,B=1.000000,A=1.000000)
-Color9=(R=0.000000,G=0.000000,B=1.000000,A=0.000000)
-Color10=(R=0.000000,G=0.000000,B=0.000000,A=0.000000)
-Color11=(R=0.000000,G=0.000000,B=0.500000,A=0.500000)
-Color12=(R=319.133575,G=0.210913,B=1.000000,A=1.000000)
-Color13=(R=240.775604,G=0.737355,B=0.000000,A=1.000000)
-Color14=(R=286.337860,G=0.782081,B=0.000000,A=1.000000)
 
 [SuppressableDialogs]
 Warning_NoPreviewMeshFound=False
