--- a/.gitignore
+++ b/.gitignore
@@ -75,3 +75,4 @@ Plugins/**/Intermediate/*
 
 # Cache files for the editor to use
 DerivedDataCache/*
+SimulacrumNo1/Intermediate/TurnkeyReport_0.log
